Fixed multi-word search error, changed font

--- a/lightbox/css/lightbox.css
+++ b/lightbox/css/lightbox.css
@@ -170,7 +170,8 @@ body.lb-disable-scrolling {
 }
 
 .lb-data .lb-caption {
-  font-size: 13px;
+  color: #fff;
+  font-size: .75em;
   font-weight: bold;
   line-height: 1em;
 }
